--- a/product/wangpan/html/index.html
+++ b/product/wangpan/html/index.html
@@ -93,7 +93,9 @@
                     <li><a data-deep="-1" class="dir_go_back" href="javascript:void(0)">全部文件</a><span class="KLxwHFb">></span></li>-->
                 </ul>
                  <span id="itemTitle" class="tab_info" style="float:left">全部文件</span>
-                <span class="tab_info" style="float:right">正在获取中...</span></div>
+                <span class="tab_info" style="float:right">正在获取中...</span>
+            </div>
+            
             <div class="file-list">
                 <!--文件列表-->
                 <table id="file-list-table" data-deep="0">
