--- a/openlayer/map.html
+++ b/openlayer/map.html
@@ -10,6 +10,13 @@
   <script src="js/common.js" type="text/javascript"></script>
 
   <link href="css/style.css" rel="stylesheet" />
+
+  <!--bootstrap-->
+  <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
+  <!-- popper.min.js 用于弹窗、提示、下拉菜单 -->
+  <script src="https://cdn.bootcss.com/popper.js/1.12.5/umd/popper.min.js"></script>
+  <!--  在jquery之后 -->
+  <script src="https://cdn.bootcss.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 </head>
 
 <body>
