--- a/GIS/fenmap/index.html
+++ b/GIS/fenmap/index.html
@@ -37,13 +37,15 @@
         <input type="checkbox" id="toRight">向右
         <button id="rotateBtn">旋转</button>
     </div>
+		<!-- 坐标转换示例 -->
+	<div id="prompt">点击地图</div>
 
 </body>
 
 <script type="text/javascript" src="lib/fengmap.min.js"></script>
 <script type="text/javascript">
     //定义全局map变量
-    var fmapID = '90882'; //mapId
+    var fmapID = '90885'; //mapId
     var map = new fengmap.FMMap({
         container: document.getElementById('map-container'), //渲染dom
         //开发者申请应用名称
@@ -96,4 +98,100 @@
             to: degree,
         })
     }
+	
+	//地图点击事件
+			map.on('mapClickNode', function(event) {
+				//获取坐标信息
+				var eventInfo = event.eventInfo.coord;
+
+				//获取焦点层
+				var currentGid = map.focusGroupID;
+
+				//获取x、y坐标
+				if (eventInfo) { //pc端
+					var coord = {
+						x: event.eventInfo.coord.x,
+						y: event.eventInfo.coord.y,
+					}
+				} else { //移动端
+					var coord = {
+						x: event.mapCoord.x,
+						y: event.mapCoord.y,
+					}
+				}
+
+				//获取鼠标点击的坐标
+				var domEvent = event.eventInfo.domEvent;
+				var _x, _y;
+
+				if (domEvent instanceof MouseEvent) {
+					_x = domEvent.clientX;
+					_y = domEvent.clientY;
+				} else {
+					_x = domEvent.changedTouches[0].clientX;
+					_y = domEvent.changedTouches[0].clientY;
+				}
+
+				//如果点击的是空白处
+				if (!event.nodeType) {
+					showPrompt(currentGid, {
+						x: _x,
+						y: _y,
+						z: map.getGroupHeight(currentGid) + map.layerLocalHeight
+					});
+					return;
+				}
+				showPrompt(currentGid, {
+					x: _x,
+					y: _y,
+					z: map.getGroupHeight(currentGid) + map.layerLocalHeight
+				});
+
+				//添加Marker
+				addMarker(currentGid, coord);
+			});
+
+			//在点击的位置添加图片标注
+			function addMarker(gid, coord) {
+				var group = map.getFMGroup(gid);
+
+				//返回当前层中第一个imageMarkerLayer,如果没有，则自动创建
+				var layer = group.getOrCreateLayer('imageMarker');
+
+				var im = new fengmap.FMImageMarker({
+					x: coord.x,
+					y: coord.y,
+					height: 2,
+					url: 'image/blueImageMarker.png',
+					size: 32,
+				});
+				layer.addMarker(im);
+			};
+
+			//显示转换坐标信息
+			function showPrompt(gid, pt1) {
+				var oPrompt = document.getElementById('prompt');
+				//屏幕坐标转换地图坐标
+				var pt2 = map.coordScreenToMap(pt1.x, pt1.y, pt1.z);
+
+				//屏幕到地图坐标可能是没有有意义的一个数字，所以做了范围限制，超出范围则是null！
+				if (pt2 != null) {
+					//地图坐标转换屏幕坐标
+					var pt3 = map.coordMapToScreen(pt2.x, pt2.y, pt2.z);
+					oPrompt.innerHTML = '<p>当前楼层(groupId)：groupId=' + gid + '</p><p>楼层高度(height)：height=' + pt1.z + '</p>' + '<p>原始屏幕坐标(point)：x=' + pt1.x + ', y=' + pt1.y + '</p>' + '<p>转换后的地理坐标(mapCoord)：x=' + parseInt(pt2.x) + ', y=' + parseInt(pt2.y) + '</p>' +
+						'<p>转换后的屏幕坐标(point)：x=' + parseInt(pt3.x) + ', y=' + parseInt(pt3.y) + '</p>';
+				} else {
+					oPrompt.innerHTML = '<p>当前楼层(groupId)：groupId=' + gid + '</p><p>楼层高度(height)：height=' + pt1.z + '</p>' + '<p>原始屏幕坐标(point)：x=' + pt1.x + ', y=' + pt1.y + '</p>' + '<p>转换后的地理坐标(mapCoord)：超出计算返回</p>' + '<p>转换后的屏幕坐标(point)：无效</p>';
+				}
+
+				//返回当前层有没有layer，如果有就删除layer
+				var layer = map.getLayerByAlias(gid, 'imageMarker');
+				if (layer) {
+					//删除当前imageMarkerlayer图层
+					layer.dispose();
+				}
+			};
+	
+	
+	
 </script>
