--- a/product/wsnIndoorBack/html/back-beforeusebootstrap/back_map.html
+++ b/product/wsnIndoorBack/html/back-beforeusebootstrap/back_map.html
@@ -16,18 +16,12 @@
     <!--<link rel="stylesheet" href="http://apps.bdimg.com/libs/jqueryui/1.10.4/css/jquery-ui.min.css">
     <script src="http://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>-->
-
-    <!--bootstrap-->
-    <link rel="stylesheet" href="../bootstrap-4.1.3-dist/css/bootstrap.min.css">
-    <script src="../js/vendor/popper.min.js"></script>
-    <script src="../bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
-
     <!--vue.js-->
     <script src="../js/vendor/vue.js"></script>
     <!--template.js-->
     <script src="../js/vendor/template.js"></script>
-    <!--路由-->
-    <script src="../js/back/back_route.js"></script>
+    <!--左侧导航栏-->
+    <script src="../js/back/back_con_left.js"></script>
     <!--css-->
     <link href="../css/back1_main.css" rel="stylesheet" type="text/css" />
     <link href="../css/back/app_back_map.css" rel="stylesheet" type="text/css" />
@@ -45,31 +39,31 @@
 </head>
 
 <body>
-    <p id="pageId" style="display:none">map</p>
     <div class="mainbox">
         <!--hearder是顶部-->
         <header class="top">
             <!--<img style="float:left;height:60px;margin:10px 10px" src="../images/logo.png" onclick="alert('hz网盘!!')" />-->
-            <p class="logo" onclick="alert('by:hz!!')">楼宇监控后台管理系统</p>
-            <!--<div class="top_navigation" style="display:block;height:60px;margin:10px 10px;float:left;"></div>-->
-            <div class="user_info">
-                <img id="head_img" class="head_img" src="../images/head_default.png" />
-                <span class="nickname">no_name21312313</span>
-
-                <div id="user_info_detail" class="user_info_detail">
-                    <div class="user_info_detail_head">
-                        <img class="head_img" src="../images/head_default.png" />
+            <p class="logo" onclick="alert('by:hz!!')">楼宇监控后台管理系统
+                <p>
+                    <div class="top_navigation" style="display:block;height:60px;margin:10px 10px;float:left;"></div>
+                    <div class="user_info">
+                        <img id="head_img" class="head_img" src="../images/head_default.png" />
                         <span class="nickname">no_name21312313</span>
-                    </div>
-                    <!--<div class="user_info_detail_middle"></div>-->
-                    <ul>
-                        <li><a id="personal_info" href="javascript:void(0)">个人资料</a></li>
-                        <li><a id="help_center" href="javascript:void(0)">帮助中心</a></li>
-                        <li><a id="logout" href="javascript:void(0)">退出</a></li>
-                    </ul>
-                </div>
 
-            </div>
+                        <div id="user_info_detail" class="user_info_detail">
+                            <div class="user_info_detail_head">
+                                <img class="head_img" src="../images/head_default.png" />
+                                <span class="nickname">no_name21312313</span>
+                            </div>
+                            <!--<div class="user_info_detail_middle"></div>-->
+                            <ul>
+                                <li><a id="personal_info" href="javascript:void(0)">个人资料</a></li>
+                                <li><a id="help_center" href="javascript:void(0)">帮助中心</a></li>
+                                <li><a id="logout" href="javascript:void(0)">退出</a></li>
+                            </ul>
+                        </div>
+
+                    </div>
         </header>
         <div class="left">
             <div class="con-left">
@@ -88,8 +82,8 @@
             <div id="app" class="content-main" v-cloak>
                 <div class="content-bar">
                     <div class="content-bar-left">
-                        <span class="content-bar-breadcrumb">{{title}}</span>
-                        <span v-if="finishLoading" class="content-bar-result-count">共{{data.obj.total}}个结果</span>
+                        <span class="content-bar-title">{{title}}</span>
+                        <span v-if="finishLoading" class="content-bar-result-count">共{{pageInfo.resultCount}}个结果</span>
                         <span v-else class="content-bar-result-count data-loading">加载中</span>
                     </div>
                 </div>
@@ -108,7 +102,7 @@
                             <th style="width:15%">修改时间</th>
                             <th style="width:20%">操作</th>
                         </tr>
-                        <tr v-for="(item,index) in data.obj.list">
+                        <tr v-for="(item,index) in items">
                             <td class="tab_num">{{index+1}}</td>
                             <td>
                                 <div class="tbcol-1">
@@ -144,7 +138,7 @@
     </div>
 
     <footer>
-        <p id="footer">推荐使用360浏览器或谷歌浏览器</p>
+        <p></p>
     </footer>
 
 
@@ -164,11 +158,13 @@
     <script src="../plugin/modal/js/modal.js"></script>
     <div id="modal"></div>
 
-    <!--map-container 注意元素和js的顺序 .用于显示建筑物的位置-->
+    <!--map-container 注意元素和js的顺序-->
     <div id="map_modal" style="display: none">
         <div id="mapContainer" class="map_container">
             <div class="title">
                 <p><span class='title'>地图阿斯蒂芬
+                    
+                    
                     </span><span class='default_cancel' style='float:right;cursor:pointer;padding-right:15px'>X</span></p>
             </div>
             <div class='map_container_con'>
@@ -179,6 +175,23 @@
     </div>
     <link rel="stylesheet" type="text/css" href="../backComp/map_container/css/mapbox.css">
     <script src="../backComp/map_container/js/mapbox.js"></script>
+
+    <script id="table_tpl" type="text/html">
+        <%for(var i = 0; i < resultList.length; i++) {%>
+            <tr>
+                <td>
+                    <div class="tbcol-1">
+                        <input type="checkbox" class="selectFile" />
+                        <i class="fa fa-folder-o"></i>
+                        <span><%:=resultList[i].name%></span>
+                    </div>
+                </td>
+                <td><span><%:=resultList[i].size%></span></td>
+                <td><span><%:=resultList[i].modified_time%></span></td>
+            </tr>
+            <%}%>
+    </script>
+
     <!--box_alert-->
     <link rel="stylesheet" type="text/css" href="../plugin/box_alert/css/box_alert.css">
     <script src="../plugin/box_alert/js/box_alert.js"></script>
@@ -188,5 +201,60 @@
     <script src="../plugin/box_container/js/box_container.js"></script>
 
     <script type="text/javascript">
+        var viewH = document.documentElement.clientHeight;
+        var right = document.getElementById("right");
+        right.style.height = (viewH - 95) + "px";
+
+
+        //控制hover的显示
+        var userDetailIsHover = false;
+
+        $("#user_info_detail").hoverDelay({
+            hoverEvent: function () {
+                userDetailIsHover = true;
+            },
+            outEvent: function () {
+                userDetailIsHover = false;
+                $("#user_info_detail").css("display", "none")
+            }
+        })
+
+        $("#head_img").hoverDelay({
+            hoverEvent: function () {
+                $("#user_info_detail").css("display", "block")
+            },
+            outDuring: 2000,
+            outEvent: function () {
+                if (!userDetailIsHover) {
+                    $("#user_info_detail").css("display", "none")
+                }
+                //$("#user_info_detail").css("display", "none")
+            }
+        });
+
+        /*测试蒙版和boxAlert*/
+        var $modal = $("#modal").modal()
+        //testModalAndBoxAlert()
+
+        function testModalAndBoxAlert() {
+            //确认
+            var modalOpt = {
+                'title': '标题',
+                'content': "内容",
+                'confirmFunc': function () {
+                    $modal.hideModal();
+                    // testMapContainer()
+                },
+                'cancelFunc': function () {
+                    $modal.hideModal();
+                }
+            }
+            $modal.boxAlert(modalOpt);
+            $modal.show();
+        }
     </script>
+
+
+
+
 </body>
