--- a/product/wsnIndoorBack/html/back_mapdetail.html
+++ b/product/wsnIndoorBack/html/back_mapdetail.html
@@ -25,10 +25,12 @@
     <script src="http://apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>-->
 
     <!--Bootstrap4  -->
-    <link rel="stylesheet" href="../bootstrap-4.1.3-dist/css/bootstrap.min.css">
-    <script src="../js/vendor/popper.min.js"></script>
-    <script src="../bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+    <!--<link rel="stylesheet" href="../bootstrap-4.1.3-dist/css/bootstrap.min.css">
 
+    <script src="../bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>-->
+    <link rel="stylesheet" href="../bootstrap-3.3.7/css/bootstrap.min.css">
+    <script src="../bootstrap-3.3.7/js/bootstrap.min.js"></script>
+    <script src="../js/vendor/popper.min.js"></script>
 
     <!--vue.js-->
     <script src="../js/vendor/vue.js"></script>
@@ -54,7 +56,7 @@
 
 <body>
     <p id="pageId" style="display:none">mapdetail</p>
-    <div class="mainbox">
+    <div id="mainbox" class="mainbox" v-cloak>
         <!--hearder是顶部-->
         <header class="top">
             <!--<img style="float:left;height:60px;margin:10px 10px" src="../images/logo.png" onclick="alert('hz网盘!!')" />-->
@@ -82,18 +84,39 @@
         <div class="left">
             <div class="con-left">
                 <div style="height:480px;width:100%;margin-top:10px">
-                    <ul id="leftNav" class="item-list">
+                    <leftnav></leftnav>
+                </div>
+                   <!--<ul id='leftNav' class='item-list' v-cloak>
+                        <li v-for='(val,key) in leftNavRouter'>
+                            <a v-if='!val.level2' href='javascript:void(0)' :id='key'><i :class='val.icon'></i> {{val.name}}</a>
+                            <a v-else href="javascript:void(0)" :id='key' class='left-nav-level2' :for='val.level2Id'><i :class='val.icon'></i>{{val.name}}
+                            <span style='float:right'><i class='fa fa-bars'></i></span> </a>
+                            <ul :id='val.level2Id' class='item-list-level2'>
+                                <li v-for='(val2,key2) in val.level2'><a href='javascript:void(0)' :id=key2>{{val2.name}}</a></li>
+                            </ul>
+                        </li>
+                    </ul>-->
+
+                <!--<li><a class="select" href="javascript:void(0)" id="mapInfo"><i class="fa fa-map"></i> 地图管理</a></li>
                         <li><a href="javascript:void(0)" id="buildInfo"><i class="fa fa-building"></i> 楼宇信息</a></li>
                         <li><a class="select" href="javascript:void(0)" id="mapInfo"><i class="fa fa-map"></i> 地图管理</a></li>
-                        <li><a href="javascript:void(0)" id="netInfo"><i class="fa fa-connectdevelop"></i> 网络管理</a></li>
+                        <li>
+                            <a href="javascript:void(0)" id="netInfo" class="left-nav-level2" for="leftNavNetWorkLevel2"><i class="fa fa-rss"></i> 网络管理
+                            <span style="float:right"><i class="fa fa-bars"></i></span>  </a>
+                        </li>
+                        <ul id="leftNavNetWorkLevel2" class="item-list-level2">
+                            <li><a href="javascript:void(0)" id="anchorInfo">锚节点</a></li>
+                            <li><a href="javascript:void(0)" id="sinkInfo">汇聚节点</a></li>
+                            <li><a href="javascript:void(0)" id="coordinatorInfo">协调器</a></li>
+                            <li><a href="javascript:void(0)" id="performOfNet">性能</a></li>
+                        </ul>
                         <li><a href="javascript:void(0)" id="monitorInfo"><i class="fa fa-user"></i> 人员监控</a></li>
-                    </ul>
-                </div>
+                        <li><a href="javascript:void(0)" id="monitorInfo"><i class="fa fa-thermometer-0"></i> 环境监控</a></li>-->
             </div>
         </div>
 
         <div class="right" id="right">
-            <div id="app" class="content-main" v-cloak>
+            <div id="app" class="content-main">
                 <p id="mapId" style="display:none">1</p>
                 <div class="content-bar">
                     <div class="content-bar-left">
@@ -115,11 +138,8 @@
                                 <div id="indoorMap" class="indoormap"></div>
                             </div>
                             <div class="map-floor">
-                                <div class="btn-group btn-group-vertical map-floor-btnroup ">
-                                    <button class="btn btn-default" type="button">4F</button>
-                                    <button class="btn btn-default" type="button">3F</button>
-                                    <button class="btn btn-default" type="button">2F</button>
-                                    <button class="btn btn-default" type="button">1F</button>
+                                <div class="btn-group btn-group-vertical map-floor-btngroup ">
+                                    <!--<button v-for="(value,index) in floor" class="btn btn-default" type="button" :class="{active:mapDetail.height-index==mapDetail.floor}">{{value}}</button>-->
                                 </div>
                             </div>
                         </div>
@@ -130,20 +150,24 @@
                     </div>
 
                     <div class="content-mapinfo">
-                        <ul id="mapDataTab" class="nav nav-tabs">
+                        <!--地图相关数据的标签页-->
+                        <ul id="mapDataTab" class="nav nav-tabs" style="margin-top:10px">
                             <li class="active">
                                 <a href="#mapData" data-toggle="tab">地图数据</a>
                             </li>
-                            <li><a href="#baseMapData" data-toggle="tab">底图数据</a></li>
+                            <li>
+                                <a href="#baseMapData" data-toggle="tab">底图数据</a>
+                            </li>
                             <li class="dropdown">
                                 <a href="#" id="tabDropPOI" class="dropdown-toggle" data-toggle="dropdown">POI数据<b class="caret"></b></a>
                                 <ul class="dropdown-menu" role="menu" aria-labelledby="tabDropPOI">
-                                    <li><a href="#poiData1" tabindex="-1" data-toggle="tab">TODO1</a></li>
-                                    <li><a href="#poiData2" tabindex="-1" data-toggle="tab">TODO2</a></li>
+                                    <li><a href="#poiData1" tabindex="-1" data-toggle="tab">POI1</a></li>
+                                    <li><a href="#poiData2" tabindex="-1" data-toggle="tab">POI2</a></li>
                                 </ul>
                             </li>
                         </ul>
                         <div id="mapDataTabContent" class="tab-content">
+                            <!--地图信息-->
                             <div class="tab-pane fade in active" id="mapData">
                                 <table class="table table-bordered table-sm" style="margin-top:10px;" v-cloak>
                                     <thead>
@@ -184,11 +208,12 @@
                                         </tr>
                                         <tr>
                                             <td>建筑物id</td>
-                                            <td>{{mapDetail.建筑物id}}</td>
+                                            <td>{{mapDetail.bid}}</td>
                                         </tr>
                                     </tbody>
                                 </table>
                             </div>
+                            <!--底图信息-->
                             <div class="tab-pane fade" id="baseMapData">
                                 <table class="table table-bordered table-sm" style="margin-top:10px;" v-cloak>
                                     <thead>
@@ -198,67 +223,19 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>code</td>
-                                            <td>{{baseMapData.code}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>host</td>
-                                            <td>{{baseMapData.host}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>serverType</td>
-                                            <td>{{baseMapData.serverType}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>workspace</td>
-                                            <td>{{baseMapData.workspace}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>requestType</td>
-                                            <td>{{baseMapData.requestType}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>layers</td>
-                                            <td>{{baseMapData.layers}}</td>
-                                        </tr>
-
-                                        <tr>
-                                            <td>x_min</td>
-                                            <td>{{baseMapData.x_min}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>y_min</td>
-                                            <td>{{baseMapData.y_min}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>x_max</td>
-                                            <td>{{baseMapData.x_max}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>y_max</td>
-                                            <td>{{baseMapData.y_max}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>zoom_default</td>
-                                            <td>{{baseMapData.zoom_default}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>zoom_min</td>
-                                            <td>{{baseMapData.zoom_min}}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>zoom_max</td>
-                                            <td>{{baseMapData.zoom_max}}</td>
+                                        <tr v-for="(value,key) in baseMapData">
+                                            <td>{{key}}</td>
+                                            <td>{{value}}</td>
                                         </tr>
                                     </tbody>
                                 </table>
                             </div>
+                            <!--poi信息-->
                             <div class="tab-pane fade" id="poiData1">
-                                <p>敬请期待</p>
+                                <p>暂无</p>
                             </div>
                             <div class="tab-pane fade" id="poiData2">
-                                <p>敬请期待</p>
+                                <p>暂无</p>
                             </div>
                         </div>
                     </div>
