--- a/product/wsnIndoorBack/html/back_building.html
+++ b/product/wsnIndoorBack/html/back_building.html
@@ -17,15 +17,19 @@
     <script src="http://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>-->
 
-    <!--Bootstrap4  -->
-    <link rel="stylesheet" href="../bootstrap-4.1.3-dist/css/bootstrap.min.css">
+    <!--Bootstrap3 -->
+    <link rel="stylesheet" href="../bootstrap-3.3.7/css/bootstrap.min.css">
+    <script src="../bootstrap-3.3.7/js/bootstrap.min.js"></script>
     <script src="../js/vendor/popper.min.js"></script>
-    <script src="../bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+
 
     <!--vue.js-->
     <script src="../js/vendor/vue.js"></script>
     <!--template.js-->
     <script src="../js/vendor/template.js"></script>
+
+    <!--baidu map-->
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Nj2QIPFYyVb49p93WnQhxbvjPt4lsmco"></script>
     <!--路由-->
     <script src="../js/back/back_route.js"></script>
     <!--css-->
@@ -45,8 +49,8 @@
 </head>
 
 <body>
-    <p id="pageId" style="display:none">building</p>
-    <div class="mainbox">
+    <p id="pageId" style="display:none">buildInfo</p>
+    <div id="mainbox" class="mainbox">
         <!--hearder是顶部-->
         <header class="top">
             <!--<img style="float:left;height:60px;margin:10px 10px" src="../images/logo.png" onclick="alert('hz网盘!!')" />-->
@@ -74,12 +78,7 @@
         <div class="left">
             <div class="con-left">
                 <div style="height:480px;width:100%;margin-top:10px">
-                    <ul id="leftNav" class="item-list">
-                        <li><a class="select" href="javascript:void(0)" id="buildInfo"><i class="fa fa-building"></i> 楼宇信息</a></li>
-                        <li><a href="javascript:void(0)" id="mapInfo"><i class="fa fa-map"></i> 地图管理</a></li>
-                        <li><a href="javascript:void(0)" id="netInfo"><i class="fa fa-connectdevelop"></i> 网络管理</a></li>
-                        <li><a href="javascript:void(0)" id="monitorInfo"><i class="fa fa-user"></i> 人员监控</a></li>
-                    </ul>
+                    <leftnav></leftnav>
                 </div>
             </div>
         </div>
@@ -88,47 +87,77 @@
             <div id="app" class="content-main" v-cloak>
                 <div class="content-bar">
                     <div class="content-bar-left">
-                        <span class="content-bar-breadcrumb content-bar-breadcrumb-back">地图管理</span>
                         <span class="content-bar-breadcrumb">{{title}}</span>
                         <span v-if="finishLoading" class="content-bar-result-count">共{{data.obj.total||0}}个结果</span>
                         <span v-else class="content-bar-result-count data-loading">加载中</span>
                     </div>
                 </div>
-                <div id="data_table">
-                    <table id="list_table" data-deep="0">
-                        <tr class="table-head">
-                            <th style=width:5%>序号</th>
-                            <th style="width:20%">
-                                <span class="tab_title" id="selectFileNum" style="float:left;margin-left:5px">名称</span>
-                            </th>
-                            <th style="width:10%">编号</th>
-                            <th style="width:35%">位置</th>
-                            <th style="width:30%">操作</th>
-                        </tr>
-                        <tr v-for="(item,index) in data.obj.list">
-                            <td class="tab_num">{{index+1}}</td>
-                            <td>
-                                <div class="tbcol-1">
-                                    <span>{{item.name}}</span>
-                                </div>
-                            </td>
-                            <td><span class="data_item_id">{{item.bid}}</span></td>
-                            <td>
-                                <div>
-                                    <p class="data-item-id" style="display:none">{{item.bid}}</p>
-                                    <a href="javascript:void(0)" title="查看位置" class="tab_small_opt_button" v-on:click.prevent="showLoc"><i class="fa fa-map-marker"></i></a>|
-                                    <span>{{item.address}}</span>
-                                </div>
-                            </td>
-                            <td id="tab_item_operate">
-                                <p class="data-item-id" style="display:none">{{item.bid}}</p>
-                                <!--<a href="javascript:void(0)" class="tab_small_opt_button" id="detail" v-on:click.prevent="toDetail"><i class="fa fa-map"></i> |</a>-->
-                                <a href="javascript:void(0)" title="地图管理" class="tab_small_opt_button" id="map" v-on:click.prevent="toMap"><i class="fa fa-map"></i> |</a>
-                                <a href="javascript:void(0)" title="网络管理" class="tab_small_opt_button" id="network" v-on:click.prevent="toNetwork"><i class="fa fa-connectdevelop"></i> |</a>
-                                <a href="javascript:void(0)" title="人员监控" class="tab_small_opt_button" id="monitor" v-on:click.prevent="toMonitor"><i class="fa fa-user"></i></a>
-                            </td>
-                        </tr>
-                    </table>
+                <ul id="showTabNav" class="nav nav-tabs">
+                    <li class="active"><a href="#showByTab" data-toggle="tab">表格展示</a></li>
+                    <li><a href="#showBMap" data-toggle="tab">地图展示</a></li>
+                </ul>
+                <div id="showTabContent" class="tab-content">
+                    <!--数据表形式-->
+                    <div class="tab-pane fade in active" id="showByTab">
+                        <!--数据表形式-->
+                        <div id="data_table">
+                            <table id="list_table" data-deep="0">
+                                <tr class="table-head">
+                                    <th style=width:5%>序号</th>
+                                    <th style="width:20%">
+                                        <span class="tab_title" id="selectFileNum" style="float:left;margin-left:5px">名称</span>
+                                    </th>
+                                    <th style="width:10%">编号</th>
+                                    <th style="width:35%">位置</th>
+                                    <th style="width:30%">操作</th>
+                                </tr>
+                                <tr v-for="(item,index) in data.obj.list">
+                                    <td class="tab_num">{{index+1}}</td>
+                                    <td>
+                                        <div class="tbcol-1">
+                                            <span>{{item.name}}</span>
+                                        </div>
+                                    </td>
+                                    <td><span class="data_item_id">{{item.bid}}</span></td>
+                                    <td>
+                                        <div>
+                                            <p class="data-item-id" style="display:none">{{item.bid}}</p>
+                                            <a href="javascript:void(0)" title="查看位置" class="tab_small_opt_button" v-on:click.prevent="showLoc"><i class="fa fa-map-marker"></i></a>|
+                                            <span>{{item.address}}</span>
+                                        </div>
+                                    </td>
+                                    <td id="tab_item_operate">
+                                        <p class="data-item-id" style="display:none">{{item.bid}}</p>
+                                        <!--<a href="javascript:void(0)" class="tab_small_opt_button" id="detail" v-on:click.prevent="toDetail"><i class="fa fa-map"></i> |</a>-->
+                                        <a href="javascript:void(0)" title="地图管理" class="tab_small_opt_button" id="map" v-on:click.prevent="toMap"><i class="fa fa-map"></i> |</a>
+                                        <a href="javascript:void(0)" title="网络管理" class="tab_small_opt_button" id="network" v-on:click.prevent="toNetwork"><i class="fa fa-connectdevelop"></i> |</a>
+                                        <a href="javascript:void(0)" title="人员监控" class="tab_small_opt_button" id="monitor" v-on:click.prevent="toMonitor"><i class="fa fa-user"></i></a>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--数据表形式end-->
+                    </div>
+                    <!--地图形式-->
+                    <div class="tab-pane fade" id="showBMap">
+                        <div id="bmap" class="bmap-container"></div>
+                        <div id="bmapDataInfo" class="bmap-data-container">
+                            <table class="table table-bordered table-sm" style="margin-top:10px;">
+                                <thead>
+                                    <tr>
+                                        <th width="25%">键</th>
+                                        <th width="75%">值</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>cdadsa</td>
+                                        <td>dasdasdsasfasd</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -160,8 +189,6 @@
         <div id="mapContainer" class="map_container">
             <div class="title">
                 <p><span class='title'>地图阿斯蒂芬
-                    
-                    
                     </span><span class='default_cancel' style='float:right;cursor:pointer;padding-right:15px'>X</span></p>
             </div>
             <div class='map_container_con'>
@@ -173,20 +200,7 @@
     <link rel="stylesheet" type="text/css" href="../backComp/map_container/css/mapbox.css">
     <script src="../backComp/map_container/js/mapbox.js"></script>
 
-    <script id="table_tpl" type="text/html">
-        <%for(var i = 0; i < resultList.length; i++) {%>
-            <tr>
-                <td>
-                    <div class="tbcol-1">
-                        <input type="checkbox" class="selectFile" />
-                        <i class="fa fa-folder-o"></i>
-                        <span><%:=resultList[i].name%></span>
-                    </div>
-                </td>
-                <td><span><%:=resultList[i].size%></span></td>
-                <td><span><%:=resultList[i].modified_time%></span></td>
-            </tr>
-            <%}%>
+    <script type="text/javascript">
     </script>
 
     <!--box_alert-->
