--- a/product/wsnIndoorBack/html/back_buildingByBMap.html
+++ b/product/wsnIndoorBack/html/back_buildingByBMap.html
@@ -17,20 +17,24 @@
     <script src="http://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>-->
 
-    <!--bootstrap-->
-    <link rel="stylesheet" href="../bootstrap-4.1.3-dist/css/bootstrap.min.css">
+    <!--Bootstrap3 -->
+    <link rel="stylesheet" href="../bootstrap-3.3.7/css/bootstrap.min.css">
+    <script src="../bootstrap-3.3.7/js/bootstrap.min.js"></script>
     <script src="../js/vendor/popper.min.js"></script>
-    <script src="../bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+
 
     <!--vue.js-->
     <script src="../js/vendor/vue.js"></script>
     <!--template.js-->
     <script src="../js/vendor/template.js"></script>
+
+    <!--baidu map-->
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Nj2QIPFYyVb49p93WnQhxbvjPt4lsmco"></script>
     <!--路由-->
     <script src="../js/back/back_route.js"></script>
     <!--css-->
     <link href="../css/back1_main.css" rel="stylesheet" type="text/css" />
-    <link href="../css/back/app_back_map.css" rel="stylesheet" type="text/css" />
+    <link href="../css/back/app_back_build.css" rel="stylesheet" type="text/css" />
 
     <style type="text/css">
         /*vue加载数据时，不显示难看的花括号*/
@@ -46,13 +50,13 @@
 
 <body>
     <p id="pageGroupId" style="display:none">Index</p>
-    <p id="pageId" style="display:none">mapInfo</p>
+    <p id="pageId" style="display:none">BuildInfoByBMap</p>
     <div id="mainbox" class="mainbox">
         <!--hearder是顶部-->
         <header class="top">
             <!--<img style="float:left;height:60px;margin:10px 10px" src="../images/logo.png" onclick="alert('hz网盘!!')" />-->
             <p class="logo" onclick="alert('by:hz!!')">楼宇监控后台管理系统</p>
-            <!--<div class="top_navigation" style="display:block;height:60px;margin:10px 10px;float:left;"></div>-->
+            <div class="top_navigation" style="display:block;height:60px;margin:10px 10px;float:left;"></div>
             <div class="user_info">
                 <img id="head_img" class="head_img" src="../images/head_default.png" />
                 <span class="nickname">no_name21312313</span>
@@ -85,58 +89,33 @@
                 <div class="content-bar">
                     <div class="content-bar-left">
                         <span class="content-bar-breadcrumb">{{title}}</span>
-                        <span v-if="finishLoading" class="content-bar-result-count">共{{data.obj.total}}个结果</span>
+                        <span v-if="finishLoading" class="content-bar-result-count">共{{data.obj.total||0}}个结果</span>
                         <span v-else class="content-bar-result-count data-loading">加载中</span>
                     </div>
+                    <div class="content-bar-right">
+                        <button id="refresh" type="button" class="btn btn-primary" @click="refresh">刷新</button>
+                    </div>
                 </div>
-                <!--"mapId":0,"title":"教学楼2号-4F","status":1,"descrip":"",
-                "createTime":"2018年11月14日 05:22","updateTime":"2018年11月14日 05:22","floor":4,"buildName":"教学楼2号"-->
-                <div id="data_table">
-                    <table id="list_table" data-deep="0">
-                        <tr class="table-head">
-                            <th style=width:5%>序号</th>
-                            <th style="width:20%">
-                                <span class="tab_title" id="selectFileNum" style="float:left;margin-left:5px">标题</span>
-                            </th>
-                            <th style="width:25%">楼名</th>
-                            <th style="width:5%">楼层</th>
-                            <th style="width:10%">状态</th>
-                            <th style="width:15%">修改时间</th>
-                            <th style="width:20%">操作</th>
-                        </tr>
-                        <tr v-for="(item,index) in data.obj.list">
-                            <td class="tab_num">{{index+1}}</td>
-                            <td>
-                                <div class="tbcol-1">
-                                    <span>{{item.title}}</span>
-                                </div>
-                            </td>
-                            <td>
-                                <div v-if="item.buildName!=null">
-                                    <p class="data-item-id" style="display:none">{{item.bid}}</p>
-                                    <a href="javascript:void(0)" title="查看位置" class="tab_small_opt_button" v-on:click.prevent="showLoc"><i class="fa fa-map-marker"></i></a>|
-                                    <span>{{item.buildName}}</span>
-                                </div>
-                                <div v-else>
-                                    暂无
-                                </div>
-                            </td>
-                            <td><span class="data_item_id">{{item.floor}}</span></td>
-                            <td>
-                                <span class="data_item_id" v-if="item.status==0">未发布</span>
-                                <span class="data_item_id" v-if="item.status==1">已发布</span>
-                                <span class="data_item_id" v-if="item.status==2">已锁定</span>
-                            </td>
-                            <td>
-                                <span>{{item.updateTime}}</span>
-                            </td>
-
-                            <td id="tab_item_operate">
-                                <p class="data-item-id" style="display:none">{{item.mapId}}</p>
-                                <a href="javascript:void(0)" title="详情和编辑" class="tab_small_opt_button" id="toDetail" v-on:click.prevent="toDetail"><i class="fa fa-pencil"></i> |</a>
-                                <a href="javascript:void(0)" title="删除地图" class="tab_small_opt_button" id="deleteMap" v-on:click.prevent="deleteMap"><i class="fa fa-trash"></i></a>
-                            </td>
-                        </tr>
+                <!--地图形式-->
+                <div id="bmap" class="bmap-container"></div>
+                <div id="bmapDataInfo" class="bmap-data-container">
+                    <div id="bmapButton" v-if='currentMarker!=null'>
+                        <button type="button" class="btn btn-primary" :bid="currentData.bid" @click='toMonitor'>进入楼内</button>
+                        <button type="button" class="btn btn-danger" disabled>删除数据</button>
+                    </div>
+                    <table class="table table-bordered table-sm" style="margin-top:10px;">
+                        <thead>
+                            <tr>
+                                <th width="25%">键</th>
+                                <th width="75%">值</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr v-for="(val,key) in currentData">
+                                <td>{{key}}</td>
+                                <td>{{val}}</td>
+                            </tr>
+                        </tbody>
                     </table>
                 </div>
             </div>
@@ -157,14 +136,14 @@
     <!--mock-->
     <script src="../js/back/mock.js"></script>
     <!--app-->
-    <script src="../js/back/app_back_map.js"></script>
+    <script src="../js/back/app_back_buildByBMap.js"></script>
 
     <!--modal-->
     <link rel="stylesheet" type="text/css" href="../plugin/modal/css/modal.css">
     <script src="../plugin/modal/js/modal.js"></script>
     <div id="modal"></div>
 
-    <!--map-container 注意元素和js的顺序 .用于显示建筑物的位置-->
+    <!--map-container 注意元素和js的顺序-->
     <div id="map_modal" style="display: none">
         <div id="mapContainer" class="map_container">
             <div class="title">
@@ -179,6 +158,10 @@
     </div>
     <link rel="stylesheet" type="text/css" href="../backComp/map_container/css/mapbox.css">
     <script src="../backComp/map_container/js/mapbox.js"></script>
+
+    <script type="text/javascript">
+    </script>
+
     <!--box_alert-->
     <link rel="stylesheet" type="text/css" href="../plugin/box_alert/css/box_alert.css">
     <script src="../plugin/box_alert/js/box_alert.js"></script>
