--- a/product/wsnIndoorBack/html/back_buildingByTab.html
+++ b/product/wsnIndoorBack/html/back_buildingByTab.html
@@ -17,17 +17,21 @@
     <script src="http://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>-->
 
-    <!--Bootstrap4  -->
-    <link rel="stylesheet" href="../bootstrap-4.1.3-dist/css/bootstrap.min.css">
+    <!--Bootstrap3 -->
+    <link rel="stylesheet" href="../bootstrap-3.3.7/css/bootstrap.min.css">
+    <script src="../bootstrap-3.3.7/js/bootstrap.min.js"></script>
     <script src="../js/vendor/popper.min.js"></script>
-    <script src="../bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+
 
     <!--vue.js-->
     <script src="../js/vendor/vue.js"></script>
     <!--template.js-->
     <script src="../js/vendor/template.js"></script>
-    <!--左侧导航栏-->
-    <script src="../js/back/back_con_left.js"></script>
+
+    <!--baidu map-->
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Nj2QIPFYyVb49p93WnQhxbvjPt4lsmco"></script>
+    <!--路由-->
+    <script src="../js/back/back_route.js"></script>
     <!--css-->
     <link href="../css/back1_main.css" rel="stylesheet" type="text/css" />
     <link href="../css/back/app_back_build.css" rel="stylesheet" type="text/css" />
@@ -45,53 +49,38 @@
 </head>
 
 <body>
-    <div class="mainbox">
+    <p id="pageGroupId" style="display:none">Index</p>
+    <p id="pageId" style="display:none">buildInfoByTab</p>
+    <div id="mainbox" class="mainbox">
         <!--hearder是顶部-->
         <header class="top">
             <!--<img style="float:left;height:60px;margin:10px 10px" src="../images/logo.png" onclick="alert('hz网盘!!')" />-->
-            <p class="logo" onclick="alert('by:hz!!')">楼宇监控后台管理系统
-                <p>
-                    <div class="top_navigation" style="display:block;height:60px;margin:10px 10px;float:left;"></div>
-                    <div class="user_info">
-                        <img id="head_img" class="head_img" src="../images/head_default.png" />
+            <p class="logo" onclick="alert('by:hz!!')">楼宇监控后台管理系统</p>
+            <div class="top_navigation" style="display:block;height:60px;margin:10px 10px;float:left;"></div>
+            <div class="user_info">
+                <img id="head_img" class="head_img" src="../images/head_default.png" />
+                <span class="nickname">no_name21312313</span>
+
+                <div id="user_info_detail" class="user_info_detail">
+                    <div class="user_info_detail_head">
+                        <img class="head_img" src="../images/head_default.png" />
                         <span class="nickname">no_name21312313</span>
-
-                        <div id="user_info_detail" class="user_info_detail">
-                            <div class="user_info_detail_head">
-                                <img class="head_img" src="../images/head_default.png" />
-                                <span class="nickname">no_name21312313</span>
-                            </div>
-                            <!--<div class="user_info_detail_middle"></div>-->
-                            <ul>
-                                <li><a id="personal_info" href="javascript:void(0)">个人资料</a></li>
-                                <li><a id="help_center" href="javascript:void(0)">帮助中心</a></li>
-                                <li><a id="logout" href="javascript:void(0)">退出</a></li>
-                            </ul>
-                        </div>
-
                     </div>
+                    <!--<div class="user_info_detail_middle"></div>-->
+                    <ul>
+                        <li><a id="personal_info" href="javascript:void(0)">个人资料</a></li>
+                        <li><a id="help_center" href="javascript:void(0)">帮助中心</a></li>
+                        <li><a id="logout" href="javascript:void(0)">退出</a></li>
+                    </ul>
+                </div>
+
+            </div>
         </header>
         <div class="left">
-            <div class="con-left-bootstarp">
-
-                    <nav class="nav nav-pills flex-column">
-                        <!-- Links -->
-                        <ul id="leftNav" class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link left-nav-self" href="javascript:void(0)" id="buildInfo"><i class="fa fa-building"></i> 楼宇信息</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link left-nav-self" href="javascript:void(0)" id="mapInfo"><i class="fa fa-map"></i> 地图管理</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link left-nav-self" href="javascript:void(0)" id="netInfo"><i class="fa fa-connectdevelop"></i> 网络管理</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link left-nav-self" href="javascript:void(0)" id="monitorInfo"><i class="fa fa-user"></i> 人员监控</a>
-                            </li>
-                        </ul>
-                    </nav>
-
+            <div class="con-left">
+                <div style="height:480px;width:100%;margin-top:10px">
+                    <leftnav group='index'></leftnav>
+                </div>
             </div>
         </div>
 
@@ -99,11 +88,16 @@
             <div id="app" class="content-main" v-cloak>
                 <div class="content-bar">
                     <div class="content-bar-left">
-                        <span class="content-bar-title">{{title}}</span>
-                        <span v-if="finishLoading" class="content-bar-result-count">共{{pageInfo.resultCount}}个结果</span>
+                        <span class="content-bar-breadcrumb">{{title}}</span>
+                        <span v-if="finishLoading" class="content-bar-result-count">共{{data.obj.total||0}}个结果</span>
                         <span v-else class="content-bar-result-count data-loading">加载中</span>
                     </div>
+                    <div class="content-bar-right">
+                        <button id="refresh" type="button" class="btn btn-primary" @click="refresh">刷新</button>
+                    </div>
                 </div>
+
+                <!--数据表形式-->
                 <div id="data_table">
                     <table id="list_table" data-deep="0">
                         <tr class="table-head">
@@ -115,7 +109,7 @@
                             <th style="width:35%">位置</th>
                             <th style="width:30%">操作</th>
                         </tr>
-                        <tr v-for="(item,index) in items">
+                        <tr v-for="(item,index) in data.obj.list">
                             <td class="tab_num">{{index+1}}</td>
                             <td>
                                 <div class="tbcol-1">
@@ -140,12 +134,13 @@
                         </tr>
                     </table>
                 </div>
+                <!--数据表形式end-->
             </div>
         </div>
     </div>
 
     <footer>
-        <p></p>
+        <p id="footer">推荐使用360浏览器或谷歌浏览器</p>
     </footer>
 
 
@@ -158,7 +153,7 @@
     <!--mock-->
     <script src="../js/back/mock.js"></script>
     <!--app-->
-    <script src="../js/back/app_back_build.js"></script>
+    <script src="../js/back/app_back_buildByTab.js"></script>
 
     <!--modal-->
     <link rel="stylesheet" type="text/css" href="../plugin/modal/css/modal.css">
@@ -170,8 +165,6 @@
         <div id="mapContainer" class="map_container">
             <div class="title">
                 <p><span class='title'>地图阿斯蒂芬
-                    
-                    
                     </span><span class='default_cancel' style='float:right;cursor:pointer;padding-right:15px'>X</span></p>
             </div>
             <div class='map_container_con'>
@@ -183,20 +176,7 @@
     <link rel="stylesheet" type="text/css" href="../backComp/map_container/css/mapbox.css">
     <script src="../backComp/map_container/js/mapbox.js"></script>
 
-    <script id="table_tpl" type="text/html">
-        <%for(var i = 0; i < resultList.length; i++) {%>
-            <tr>
-                <td>
-                    <div class="tbcol-1">
-                        <input type="checkbox" class="selectFile" />
-                        <i class="fa fa-folder-o"></i>
-                        <span><%:=resultList[i].name%></span>
-                    </div>
-                </td>
-                <td><span><%:=resultList[i].size%></span></td>
-                <td><span><%:=resultList[i].modified_time%></span></td>
-            </tr>
-            <%}%>
+    <script type="text/javascript">
     </script>
 
     <!--box_alert-->
@@ -208,60 +188,5 @@
     <script src="../plugin/box_container/js/box_container.js"></script>
 
     <script type="text/javascript">
-        var viewH = document.documentElement.clientHeight;
-        var right = document.getElementById("right");
-        right.style.height = (viewH - 95) + "px";
-
-
-        //控制hover的显示
-        var userDetailIsHover = false;
-
-        $("#user_info_detail").hoverDelay({
-            hoverEvent: function () {
-                userDetailIsHover = true;
-            },
-            outEvent: function () {
-                userDetailIsHover = false;
-                $("#user_info_detail").css("display", "none")
-            }
-        })
-
-        $("#head_img").hoverDelay({
-            hoverEvent: function () {
-                $("#user_info_detail").css("display", "block")
-            },
-            outDuring: 2000,
-            outEvent: function () {
-                if (!userDetailIsHover) {
-                    $("#user_info_detail").css("display", "none")
-                }
-                //$("#user_info_detail").css("display", "none")
-            }
-        });
-
-        /*测试蒙版和boxAlert*/
-        var $modal = $("#modal").modal()
-        //testModalAndBoxAlert()
-
-        function testModalAndBoxAlert() {
-            //确认
-            var modalOpt = {
-                'title': '标题',
-                'content': "内容",
-                'confirmFunc': function () {
-                    $modal.hideModal();
-                    // testMapContainer()
-                },
-                'cancelFunc': function () {
-                    $modal.hideModal();
-                }
-            }
-            $modal.boxAlert(modalOpt);
-            $modal.show();
-        }
     </script>
-
-
-
-
 </body>
