--- a/product/wsnIndoorBack/html/back_buildingByBMap.html
+++ b/product/wsnIndoorBack/html/back_buildingByBMap.html
@@ -137,6 +137,8 @@
     <script src="../js/back/mock.js"></script>
     <!--app-->
     <script src="../js/back/app_back_buildByBMap.js"></script>
+        <!--app-->
+    <script src="../js/back/back_bmap.js"></script>
 
     <!--modal-->
     <link rel="stylesheet" type="text/css" href="../plugin/modal/css/modal.css">
