--- a/product/wsnIndoorBack/html/back_mapdetail.html
+++ b/product/wsnIndoorBack/html/back_mapdetail.html
@@ -285,6 +285,8 @@
 
     <!--app-->
     <script src="../js/back/app_back_map_detail.js"></script>
+    <!--gmap-->
+    <script src="../js/back/back_gmap.js"></script>
 
     <!--modal-->
     <link rel="stylesheet" type="text/css" href="../plugin/modal/css/modal.css">
