--- a/product/wsnIndoorBack/html/monitor_anchor.html
+++ b/product/wsnIndoorBack/html/monitor_anchor.html
@@ -10,6 +10,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
     <meta name="renderer" content="webkit" />
     <meta http-equiv="Cache-Control" content="no-siteapp" />
+
+    <!--openlayer-->
+    <script src="../openlayers/ol.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="../openlayers/ol.css" type="text/css">
     <!--jquery-->
     <script src="../js/vendor/jquery-3.2.1.min.js"></script>
     <!--jqueryui-->
@@ -34,7 +38,7 @@
     <script src="../js/back/back_route.js"></script>
     <!--css-->
     <link href="../css/back1_main.css" rel="stylesheet" type="text/css" />
-    <link href="../css/back/monitor_overview.css" rel="stylesheet" type="text/css" />
+    <link href="../css/back/monitor_anchor.css" rel="stylesheet" type="text/css" />
 
     <style type="text/css">
         /*vue加载数据时，不显示难看的花括号*/
@@ -89,13 +93,44 @@
                 <div class="content-bar">
                     <div class="content-bar-left">
                         <span class="content-bar-breadcrumb">{{title}}</span>
-                        <span v-if="!finishLoading" class="content-bar-result-count data-loading">加载中</span>
+                        <span v-if="!mapFinishLoading" class="content-bar-result-count data-loading">加载中</span>
                     </div>
                     <div class="content-bar-right">
-                        <button id="refresh" type="button" class="btn btn-primary" @click="refresh">刷新</button>
+                        <!--<button id="refresh" type="button" class="btn btn-primary" @click="refresh">刷新</button>-->
                     </div>
                 </div>
 
+                <!--内容-->
+                <div class="content-mapapp">
+                    <div class="content-mapComponent">
+                        <div class="map-all">
+                            <!--工具-->
+                            <!--<div class="map-tool">
+
+                            </div>-->
+                            <div class="map-entity" style="width: 90%;">
+                                <!--地图-->
+                                <div id="indoorMap" class="indoormap"></div>
+                            </div>
+                            <!--楼层-->
+                            <div class="map-floor">
+                                <div class="btn-group btn-group-vertical map-floor-btngroup ">
+                                    <button v-for="(value,index) in buildMapRel" class="btn btn-default" type='button' :floor='value.floor' :mapId='value.mapId'>{{value.floor}}F</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!--状态-->
+                        <div class="map-footer">
+                            <span v-if="!mapFinishLoading" class="map-status data-loading">加载中</span>
+                            <span v-else class="map-status">加载完毕--地图名称：{{mapDetail.title}}</span>
+                        </div>
+                    </div>
+
+                    <div class="content-mapinfo">
+
+                    </div>
+                </div>
+                <!--内容end-->
             </div>
         </div>
     </div>
@@ -114,6 +149,8 @@
     <script src="../js/back/mock.js"></script>
     <!--app-->
     <script src="../js/back/back_monitor_anchor.js"></script>
+    <!--gmap-->
+    <script src="../js/back/back_gmap.js"></script>
 
     <link rel="stylesheet" type="text/css" href="../backComp/map_container/css/mapbox.css">
     <script src="../backComp/map_container/js/mapbox.js"></script>
